feat: put up styling for a basic landing page

--- a/src/globalStyle/global.css
+++ b/src/globalStyle/global.css
@@ -40,6 +40,14 @@ body {
   font-family: 'Poppins', sans-serif;
   color: var(--color-white);
   background-color:#282828;
+  /* to text selection */
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Opera and Firefox */
 }
 
 /* ================== GENERAL STYLES ================== */
