--- a/src/components/reusable/reusable.css
+++ b/src/components/reusable/reusable.css
@@ -1,6 +1,6 @@
 .letterWrapper {
-  font-size: 50px;
-  font-weight: bold;
+  font-size: 40px;
+  font-weight: 600;
   filter: drop-shadow(1px 1px 1px red) invert(0%);
   transition: var(--transition);
 }
