--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -9,8 +9,9 @@
 .foreground {
   position: fixed;
   background: transparent;
-  left:50px; 
-  top:20px;
+  width: 50%;
+  left: 25%; 
+  top: 35%;
 }
 
 .hidden {
