--- a/src/components/components.css
+++ b/src/components/components.css
@@ -30,27 +30,29 @@
 
 /* ================== GLITCH STYLES ================== */
 .glitch {
-  font-size: 6rem;
+  font-size: 8rem;
   font-weight: bold;
   position: relative;
-
-  animation: glitch 750ms infinite;
+  width: 100%;
+  
+  animation: glitch 1000ms infinite;
 }
 
 .glitch span{
   position: absolute;
+  width: 100%;
   top: 0;
   left: 0;
 }
 
 .glitch span:first-child{
-  animation: glitch 650ms infinite;
+  animation: glitch 750ms infinite;
   clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
   transform: translate(-0.025em, -0.0125em);
 }
 
 .glitch span:last-child{
-  animation: glitch 375ms infinite;
+  animation: glitch 650ms infinite;
   clip-path: polygon(0 60%, 100% 60%, 100% 100%, 0 100%);
   transform: translate(0.0125em, 0.025em);
 }
@@ -61,9 +63,11 @@
   }
   25% {
     opacity: 1;
+    transform: translate(0.05em, 0);
   }
   49% {
     opacity: 0;
+    transform: translate(0.025em, 0);
   }
   50% {
     opacity: 1;
