--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -1,7 +1,3 @@
-.aboutHeading{
-  width: 8.5%;
-}
-
 .aboutMe {
   display: grid;
   grid-template-columns: 30% 50%;
@@ -31,7 +27,7 @@
   background: linear-gradient(
       45deg,
       transparent,
-      var(--color-red),
+      var(--color-white),
       transparent
   );
   display: inline-grid;
@@ -42,7 +38,7 @@
   background: linear-gradient(
       45deg,
       transparent,
-      var(--color-red),
+      var(--color-white),
       transparent
   );
 }
