--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,3 +1,16 @@
+.loading{
+  animation: loading 650ms;
+}
+
+@keyframes loading {
+  from {
+    background-color: var(--color-white);
+  }
+  to {
+    background-color: var(--color-white);
+  }
+}
+
 nav {
   background: rgba(0, 0, 0, 0.3);
   width: 100%;
