feat: updates the experience page.

--- a/src/globalStyle/global.css
+++ b/src/globalStyle/global.css
@@ -21,6 +21,7 @@
   --color-bg: #141524ed;
   --color-red: #D00000;
   --color-white: #EBF2FA;
+  --color-grey: #00000016;
   --color-green: #BCD979;
   --color-orange: #CC4100;
 
