--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,16 +1,3 @@
-.loading{
-  animation: loading 650ms;
-}
-
-@keyframes loading {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
 nav {
   width: 100%;
   padding-right: 10%;
@@ -24,7 +11,7 @@ nav {
   justify-content: right;
 }
 
-nav h2{
+nav h2 {
   position: relative;
   display: inline-block;
   margin: 10px;
@@ -55,7 +42,7 @@ nav a:hover:after {
 }
 
 /* active tab has a white line below the words */
-.active:before{
+.active:before {
   content: "";
   position: absolute;
   left:0;
@@ -64,4 +51,42 @@ nav a:hover:after {
   height: 2px;
   background-color: #FFFFFF;
   transition: width .3s ease-in-out;
+}
+
+.loading {
+  animation: loading 650ms;
+}
+
+@keyframes loading {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.homepage {
+  cursor: pointer;
+}
+
+.homepage::before {  
+  transform: scaleX(0);
+  transform-origin: bottom right;
+}
+
+.homepage:hover::before {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.homepage::before {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  inset: 0 0 0 0;
+  background: rgb(0, 0, 0);
+  z-index: -1;
+  transition: transform .3s ease;
 }
