feat: updates contact me page and highlighting of pages.

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -86,7 +86,7 @@ nav a:hover:after {
   position: absolute;
   top: 0; right: 0; bottom: 0; left: 0;
   inset: 0 0 0 0;
-  background: rgb(0, 0, 0);
+  background: var(--color-bg);
   z-index: -1;
   transition: transform .3s ease;
 }
