--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -1,32 +1,92 @@
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: grey;
-  opacity: 1; /* Firefox */
+.contact {
+  padding-left: 10.5%;
+  padding-top: 2%;
+}
+
+.contactHeading{
+  width: 19.2%;
 }
 
 .inputName {
   background-color: transparent;
   color: var(--color-white);
-  width: 40%;
+  width: 100%;
   font-size: 20px;
-  border-style: solid;  
-  border: 1px;
-  border-color: var;
   resize: none;
+  padding: 5px;
 }
 
 .inputEmail {
   background-color: transparent;
   color: var(--color-white);
-  width: 40%;
+  width: 100%;
   font-size: 20px;  
   resize: none;
+  padding: 5px;
 }
 
 .inputMessage {
   background-color: transparent;
   color: var(--color-white);
-  width: 40%;
+  width: 100%;
   font-size: 20px;
   height: 200px;
   resize: none;
+  padding: 5px;
+}
+
+/* animated borders */
+.animated-box {
+  position: relative;
+  width: 40%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.animated-box:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 4px;
+  background: linear-gradient(70deg, var(--color-white), var(--color-white), var(--color-white), var(--color-grey));
+  background-size: 300% 300%;
+  clip-path: polygon(0% 100%, 3px 100%, 3px 3px, calc(100% - 3px) 3px, calc(100% - 3px) calc(100% - 3px), 3px calc(100% - 3px), 3px 100%, 100% 100%, 100% 0%, 0% 0%);
+}
+
+.animated-box.in:after {
+  animation: frame-enter 1.5s forwards ease-in-out reverse, gradient-animation 3s ease-in-out infinite;
+}
+
+/* motion */
+@keyframes gradient-animation {
+  0% {
+    background-position: 15% 0%;
+  }
+  50% {
+    background-position: 85% 100%;
+  }
+  100% {
+    background-position: 15% 0%;
+  }
+}
+
+@keyframes frame-enter {
+  0% {
+    clip-path: polygon(0% 100%, 3px 100%, 3px 3px, calc(100% - 3px) 3px, calc(100% - 3px) calc(100% - 3px), 3px calc(100% - 3px), 3px 100%, 100% 100%, 100% 0%, 0% 0%);
+  }
+  25% {
+    clip-path: polygon(0% 100%, 3px 100%, 3px 3px, calc(100% - 3px) 3px, calc(100% - 3px) calc(100% - 3px), calc(100% - 3px) calc(100% - 3px), calc(100% - 3px) 100%, 100% 100%, 100% 0%, 0% 0%);
+  }
+  50% {
+    clip-path: polygon(0% 100%, 3px 100%, 3px 3px, calc(100% - 3px) 3px, calc(100% - 3px) 3px, calc(100% - 3px) 3px, calc(100% - 3px) 3px, calc(100% - 3px) 3px, 100% 0%, 0% 0%);
+  }
+  75% {
+    -webkit-clip-path: polygon(0% 100%, 3px 100%, 3px 3px, 3px 3px, 3px 3px, 3px 3px, 3px 3px, 3px 3px, 3px 0%, 0% 0%);
+  }
+  100% {
+    -webkit-clip-path: polygon(0% 100%, 3px 100%, 3px 100%, 3px 100%, 3px 100%, 3px 100%, 3px 100%, 3px 100%, 3px 100%, 0% 100%);
+  }
 }
