--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -32,7 +32,7 @@ nav a:after {
   top: 100%;
   width: 0;
   height: 2px;
-  background-color: #FFFFFF;
+  background-color: var(--color-white);
   transition: width .3s ease-in-out;
 }
   
@@ -49,7 +49,7 @@ nav a:hover:after {
   top: 100%;
   width: 100%;
   height: 2px;
-  background-color: #FFFFFF;
+  background-color: var(--color-white);
   transition: width .3s ease-in-out;
 }
 
