chore: changes the styling of the home button on nav bar and adds a json file for about page.

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -82,11 +82,9 @@ nav a:hover:after {
 
 .homepage::before {
   content: " ";
-  display: block;
   position: absolute;
   top: 0; right: 0; bottom: 0; left: 0;
-  inset: 0 0 0 0;
-  background: var(--color-bg);
+  background: linear-gradient(70deg, var(--color-black), var(--color-grey));
   z-index: -1;
   transition: transform .3s ease;
 }
