--- a/src/globalStyle/global.css
+++ b/src/globalStyle/global.css
@@ -19,10 +19,10 @@
 
   /* colors */
   --color-bg: #141524ed;
-  --color-red: #D00000;
   --color-white: #EBF2FA;
   --color-grey: #00000016;
-  --color-green: #BCD979;
+  --color-black: #000000;
+  --color-red: #D00000;
   --color-orange: #CC4100;
 
   /* transitions */
@@ -77,7 +77,7 @@ body {
 
 /* Changing the highlighting colour */
 ::selection {
-  background: red;
+  background: var(--color-black);
 }
 
 /* ================== GENERAL STYLES ================== */
