--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -14,6 +14,10 @@
   gap: 5%;
   margin: 20px;
   text-align: left;
+  background: var(--color-white);
+  color: var(--color-black);
+  border-radius: 10px;
+  padding: 10px;
 }
 
 .aboutMeSkills {
