chore: changes the styling of the headers for every page.

--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -1,10 +1,10 @@
 .contact {
   padding-left: 10.5%;
-  padding-top: 2%;
+  padding-top: 0%;
 }
 
-.contactHeading{
-  width: 19.2%;
+.formElements {
+  margin-top: 20px;
 }
 
 .inputName {
