--- a/src/globalStyle/global.css
+++ b/src/globalStyle/global.css
@@ -168,28 +168,33 @@ img {
   object-fit: cover;
 }
 
-/* ================== TERMINAL STYLES ================== */
-/* typewriter */
-.typewriter {
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid var(--color-white); /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  letter-spacing: 0em; /* Adjust as needed */
-  animation: 
-    typing 0.7s steps(40, end),
-    blink-caret 0.75s step-end infinite;
+/* ================== HEADING STYLES ================== */
+.heading {
+  position: relative;
+  display: inline-block;
+
 }
 
-/* The typing effect */
-@keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
+/* heading filler */
+.heading:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 100%;
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-white);
+  transition: width .3s ease-in-out;
+  animation: headingLoad 1s ease-in-out;
 }
-
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: var(--color-white); }
+  
+@keyframes headingLoad {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
 }
 
 /* ================== MEDIA QUERIES (MEDIUM DEVICES) ================== */
