--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -1,21 +1,15 @@
 .aboutMe {
   padding-left: 10%;
   padding-right: 10%;
-  padding-top: 2%;
+  padding-top: 0%;
   
-}
-
-.aboutmeHeading{
-  width: 16%;
-  padding-left: 1%;
 }
 
 .aboutMeText {
   display: grid;
   grid-template-columns: 100%;
-  gap: 5%;
-  margin: 20px;
-  padding: 10px;
+  margin-top: 10px;
+  gap: 0%;
   text-align: left;
   overflow: hidden;
 }
@@ -47,12 +41,8 @@
   text-align: left;
 }
 
-.aboutMeLinks {
-  overflow: hidden;
-  gap: 15%;
-  padding: 70px 0;
-  margin: 20px;
-  text-align: left;
+.aboutMeLinks:hover {
+  font-weight: bold;
 }
 
 .aboutMeLink {
@@ -65,6 +55,7 @@
   width: 100%;
   margin-top: 10px;
   margin-bottom: 10px;
+  padding: 10px;
 }
 
 .aboutMe .animated-box:after {
@@ -328,19 +319,6 @@ dl dd:after{
 
 dl dd:after{
   clear: both;
-}
-
-figure a{
-  z-index: 1000;
-  text-indent: 200%;
-  white-space: nowrap;
-  font-size: 0;
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
 }
 
 @media (min-width: 450px) {
