--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -247,6 +247,25 @@ figure .caption {
   transform: translate3d(0,0,0);
 }
 
+.back .links {
+  letter-spacing: 1px;
+  font-size: 68.5%;
+  position: relative;
+  bottom: 0;
+  top: 100%;
+  left: 0;
+  padding: 5px;
+  width: 100%;
+  opacity: 0;
+  transform: translate3d(0,10px,0);
+  transition: opacity 0.35s, transform 0.35s;
+}
+
+.back:hover .links {
+  opacity: 1;
+  transform: translate3d(0,0,0);
+}
+
 .back .caption:before,
 .back .caption:after{
   position: absolute;
