--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -252,7 +252,7 @@ figure .caption {
   font-size: 68.5%;
   position: relative;
   bottom: 0;
-  top: 100%;
+  z-index: 1; /* impt to get the link to be above the border which is actually a transparent card covering all the words */
   left: 0;
   padding: 5px;
   width: 100%;
